feat: implement core P0/P1 security remediations
Agent-Logs-Url: https://github.com/dpb1526544/GraduationProject_NSEP/sessions/c0c848e2-1872-4712-bc64-358d933de32c

Co-authored-by: dpb1526544 <79245576+dpb1526544@users.noreply.github.com>